# csce585-midi

./: .coverage  .coverage.Cades-MacBook-Air-2.local.47728.XaMajbKx  .gitignore  README.md  SUBMISSION_CHECKLIST.txt  SetupNotebook.ipynb  evaluate.py  generate.py  prepare.py  pyproject.toml  requirements.txt  run.py  train.py  uv.lock.macos
aria_miditok/: config.json
data/: README.md
docs/: A100_PERFORMANCE.md  A100_TRAINING.md  AUGMENTATION.md  AUGMENTATION_SUMMARY.md  CHECKPOINT_SYSTEM.md  COLAB_COMMANDS.md  COLAB_STEP_BY_STEP.md  COLAB_TRAINING.md  ENVIRONMENT.md  LOGS_AND_PLOTS.md  PROGRESS_BAR_FIX.md  PROPOSAL.md  SEED_BY_FILENAME.md
logs/: evaluation_log.csv  models.csv  output_midis.csv
models/: lstm.py  lstm_0926900.pth  lstm_09271145.pth  lstm_20250927_152720.pth  lstm_20250927_165725.pth
presentation/: README.md  architecture_diagrams.py  comprehensive_training.sh  create_presentation_plots.py  generate_all_visuals.sh  model_comparison.py  run_presentation_experiments.sh  verify_setup.sh
scripts/: README.md  check_gpu.py  colab_setup.sh  compare_augmentation.py  start_p2_experiments.sh  test_augmentation.py  test_discriminators.py  test_generators.py  test_optimizations.sh  test_progress_bars.py  test_progress_fix.py  test_system.sh  test_training.sh  train_a100.sh  train_all.py  train_all_discriminators.py  train_all_models.sh  train_augmented.sh  train_colab_a100.sh  train_discriminators_fast.py  train_miditok_generators.sh  train_miditok_optimized.sh  train_miditok_simple.sh  train_transformer_only.py
src/: config.py  convert_checkpoint.py  dataset.py  generate.py  midi_tokenization.py  model.py  preprocess.py  tokenizer_setup.py
tests/: .coverage  conftest.py  test_analyze_logs.py  test_augment_dataset.py  test_augment_dataset_args.py  test_discriminators.py  test_find_best_midis.py  test_generate.py  test_generate_args.py  test_generators.py  test_midi_to_seed.py  test_midi_to_seed_generation.py  test_preprocessing.py  test_preprocessing_miditok.py  test_preprocessing_naive.py  test_seed_control.py  test_seed_selection.py  test_train_discriminator.py  test_train_generator.py  test_train_generator_args.py  test_train_generator_paths.py  test_utils.py
training/: train_discriminator.py  train_generator.py
utils/: analyze_logs.py  augment_dataset.py  augment_miditok.py  diagnose_generation.py  download_small_aria.sh  find_best_midis.py  measure_dataset.py  midi_to_seed.py  preprocess.py  (+6 more)
(+66 files in other folders)
